--- a/PRG3/main.html
+++ b/PRG3/main.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title></title>
-<script src="scripts/angular.js"></script>
-<script src="scripts/angular-route.js"></script>
-<script src="scripts/route.js"></script>
-</head>
-<body>
-<h2>Welcome</h2>
-<div ng-app="mainApp">
-<p><a href="#home">Home</a></p>
-<p><a href="#contacts">Contact us</a></p>
-<div ng-view></div>
-</div>
+var mainApp = angular.module("mainApp",[ngRoute]);
+mainApp.config(['$routeProvider',function($routeProvider){
+$routeProvider.
+when('/'{
+templateUrl:'Template/main.html',
+controller:'mainController'
+}).
+when('/contacts',{
+templateUrl:'Template/contacts.html',
+controller:'contactsController'
+}).
+Otherwise({
+redirectTo:'/'
+});
+}]);
+mainApp.controller("mainController",function($scope){
+$scope.message="Hello";
+});
+
